# craneops-datahub

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  deploy-platform.yml  deploy.yml
infra/: .env.example  docker-compose.yml
infra/init-sql/: 01_init.sql  cloud_init.sql  entrypoint.sh
infra/spark/: Dockerfile
infra/terraform/: 12-adf.tf  14-network.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/generator/: go.mod  main.go
src/ingestion/: Dockerfile  pom.xml
src/ingestion/src/main/java/com/craneops/ingestion/: CraneOpsIngestionApplication.java
src/ingestion/src/main/java/com/craneops/ingestion/controller/: TelemetryController.java
src/ingestion/src/main/java/com/craneops/ingestion/dto/: TelemetryEvent.java
src/ingestion/src/main/java/com/craneops/ingestion/exception/: GlobalExceptionHandler.java
src/ingestion/src/main/java/com/craneops/ingestion/service/: IngestionService.java
src/ingestion/src/main/resources/: application.properties
src/ingestion/src/test/java/com/craneops/ingestion/: IngestionServiceTest.java
src/processing/: pyproject.toml
src/processing/src/: etl_job.py
src/processing/tests/: test_etl.py
