[project]
name = "craneops-processing"
version = "0.1.0"
description = "PySpark ETL jobs for CraneOps DataHub"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

# Add this section to tell hatchling where your code is
[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"